<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/nome_chet"
        android:icon="@drawable/is_home_chet"
        android:id="@+id/id_home_chet"
        android:orderInCategory="100" />

    <item
        android:title="@string/limitations_chet"
        android:icon="@drawable/is_limitation_chet"
        android:id="@+id/id_limitations_chet"
        android:orderInCategory="200" />

    <item
        android:title="@string/pantograph_chet"
        android:icon="@drawable/is_pantograph_chet"
        android:id="@+id/id_pantograph_chet"
        android:orderInCategory="300" />

    <item
        android:title="@string/brake_chet"
        android:icon="@drawable/is_brake_chet"
        android:id="@+id/id_brake_chet"
        android:orderInCategory="400" />
<!--    <item-->
<!--        android:title="@string/redacktor_nechet"-->
<!--        android:icon="@drawable/is_redacktor_chet"-->
<!--        android:id="@+id/id_redacktor_chet"-->
<!--        android:orderInCategory="500" />-->
    <item
        android:title="@string/tracks_chet"
        android:icon="@drawable/is_tracks"
        android:id="@+id/id_tracks_chet"
        android:orderInCategory="600" />
</menu>