<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/nome_nechet"
        android:icon="@drawable/is_home_nechet"
        android:id="@+id/id_home_nechet"
        android:orderInCategory="100" />

    <item
        android:title="@string/limitations_nechet"
        android:icon="@drawable/is_limitation_nechet"
        android:id="@+id/id_limitations_nechet"
        android:orderInCategory="200" />

    <item
        android:title="@string/pantograph_nechet"
        android:icon="@drawable/is_pantograph_nechet"
        android:id="@+id/id_pantograph_nechet"
        android:orderInCategory="300" />

    <item
        android:title="@string/brake_nechet"
        android:icon="@drawable/is_brake_nechet"
        android:id="@+id/id_brake_nechet"
        android:orderInCategory="400" />

<!--    <item-->
<!--        android:title="@string/redacktor_nechet"-->
<!--        android:icon="@drawable/is_redacktor_nechet"-->
<!--        android:id="@+id/id_redacktor_nechet"-->
<!--        android:orderInCategory="500" />-->

    <item
        android:title="@string/tracks_nechet"
        android:icon="@drawable/is_tracks_nechet"
        android:id="@+id/id_tracks_nechet"
        android:orderInCategory="600" />

</menu>