<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/dialogMainDistanceChet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_distance_km_chet"
        android:inputType="number"
        tools:ignore="Autofill,HardcodedText,TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/dialogMainDistanceSaveChet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_distance_save_chet"
            tools:ignore="ButtonStyle,HardcodedText" />

        <Button
            android:id="@+id/dialogMainDistanceCancelChet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:text="@string/main_distance_cancel_chet"
            tools:ignore="ButtonOrder,ButtonStyle,HardcodedText" />
    </LinearLayout>

</LinearLayout>